Brought the logging stack up to the new plan: structured timestamps everywhere, a repeatable migration path, and a full-screen Textual browser so you can explore command history comfortably.
watchdog/src/watchdog/db.py (lines 1-204) now enforces a ts column (auto-added/backfilled when missing), normalizes timestamps from session names, and exposes bulk helpers such as fetch_all_entries() for the UI.
watchdog/src/watchdog/migrate.py (lines 1-64) always derives per-entry timestamps from the session filename (fallback to file mtime) so historic imports fit the schema.
The bash snippet still sets up PROMPT_COMMAND, but the CLI now guards the _realtime_log handler and lazy-loads the TUI module (watchdog/src/watchdog/config.py (lines 13-39), watchdog/src/watchdog/cli.py (lines 1-70)).
Added a Textual app with prompt dialogs, filters (/ and d), Enter-to-view details, CSV export, and a status bar; it loads data once and filters client-side (watchdog/src/watchdog/tui/app.py (lines 1-234), watchdog/src/watchdog/tui/__init__.py (lines 1-3)).
Surfaced the feature in docs (usage table + TUI instructions) and declared the new dependency/entrypoint in pyproject.toml (watchdog/README.md (lines 32-88), watchdog/pyproject.toml (lines 1-16)).
Tests:

PYTHONPATH=watchdog/src python -m watchdog.cli --help
PYTHONPATH=watchdog/src python -m watchdog.cli migrate --reset
PYTHONPATH=watchdog/src python -m watchdog.cli _realtime_log "  4  ls"

--- a/watchdog/pyproject.toml
+++ b/watchdog/pyproject.toml
@@ -9,9 +9,13 @@ description = "Simple bash session logger"
 readme = "README.md"
 authors = [{ name = "Watchdog" }]
 requires-python = ">=3.9"
+dependencies = [
+    "textual>=0.42.0",
+]
 
 [project.scripts]
 watchdog = "watchdog.cli:main"
+watchdog-tui = "watchdog.tui.app:run"
 
 [tool.setuptools.packages.find]
 where = ["src"]
